Changed id for html config

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -10,7 +10,7 @@
   <title>FEC Product Detail</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="ratings"></div>
   <!-- SRC section for other components --> 
 </body>
 </html>
